--- a/M_19_prod/Dockerfile
+++ b/M_19_prod/Dockerfile
@@ -13,4 +13,4 @@ RUN pip install -r requirements.txt
 
 COPY mysite .
 
-CMD ["gunicorn", "mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "mysite.mysite.wsgi:application", "--bind", "0.0.0.0:8000"]
