--- a/M_19_prod/docker-compose.yaml
+++ b/M_19_prod/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     build:
       dockerfile: ./Dockerfile
     command:
-      - gunicorn
-      - mysite.wsgi:application
-      - --bind
+      - python3
+      - manage.py
+      - runserver
       - 0.0.0.0:8000
     ports:
       - "8000:8000"
